# RTAI

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  NATURAL_CORTEX.md  NOTICE  README.md  SECURITY.md  VIBE.md  pyproject.toml
docs/: EFFICIENCY_TOURNAMENT.md  EVENT_ALGEBRA.md  EXPERIMENTS.md  GROWING_CORTEX.md  MODEL_RELEASES.md  NATURAL_CORTEX_REVIEW.md  NEUROGENESIS.md  PLASTICITY_GENOME.md  ROADMAP.md
fractal/: __init__.py  agent.py  ask.py  cell.py  chat.py  chat_format.py  data.py  data_agent.py  data_chat_ft.py  data_dialog.py  data_mix.py  data_web.py  data_web_ft.py  diffuse.py  efficiency.py  exp_efficiency_tournament.py  exp_event_algebra.py  exp_growing_cortex.py  exp_per_scale_plasticity.py  exp_plastic_genome.py  exp_w0_interference.py  feedback.py  grammar.py  growing_cortex.py  live.py  model.py  natural_ab.py  natural_data.py  natural_eval.py  natural_preflight.py  natural_runtime.py  natural_train.py  neurogenesis.py  persist.py  plastic_genome.py  plasticity.py  probe.py  recall.py  tokenizer.py  train.py  (+3 more)
rtai/: __init__.py  chat.py  data_recall.py  data_recall_lm.py  data_text.py  export_viz.py  model.py  model_hub.py  monitor.py  run.py  serve.py  state.py  tokenizer.py  train.py  train_lm.py
scripts/: audit-public.sh  run-event-algebra-window.sh  run-growing-cortex-dl580.sh  run-natural-cortex-gpu.sh  run-natural-cortex.sh  start-event-algebra-window.sh  start-growing-cortex-dl580.sh  start-natural-cortex-gpu.sh
tests/: exp_persist_lm.py  test_docs.py  test_model_hub.py  test_persistence_security.py  (+1 more)
(+21 files in other folders)
