[project]
name = "rtai"
version = "0.0.1"
description = "Persistent self-modifying (SRWM) language model — the model learns by rewriting its own weights at runtime, and keeps the changes across sessions."
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "tokenizers>=0.23.1",
    "datasets>=5.0.0",
]

[project.optional-dependencies]
hub = [
    "huggingface-hub>=1.0",
    "safetensors>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.12",
    "safetensors>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["fractal/tests", "tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E4", "E9", "F"]
